# AI_institute_fundation_project_email

./: README.md  debug_server.py  pyproject.toml
mcp_email/: email_server.py  utils.py
mcp_email/create_draft_reply/: create_draft_reply.py
mcp_email/get_unread_emails/: get_unread_emails.py  utils.py
mcp_email/send_thread_reply/: send_thread_reply.py
